[project]
name = "copypod"
version = "0.5.0"
description = "Copy a Kubernetes pod and run commands in its environment"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Jeppe Fihl-Pearson", email =  "jeppe@memrise.com>" },
]
dependencies = ["kubernetes >=35.0.0, <35.1.0"]
requires-python = ">= 3.10, < 4"

[project.scripts]
copypod = "copypod.main:main"

[project.urls]
repository = "https://github.com/Memrise/copypod"

[build-system]
requires = ["poetry-core >= 2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma missing
    "D1",  # Missing docstrings
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "E501",  # Line too long
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "T201",  # `print` found
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
