[project]
name = "copypod"
version = "0.6.0"
description = "Copy a Kubernetes pod and run commands in its environment"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Jeppe Fihl-Pearson", email =  "jeppe@memrise.com" },
]
keywords = ["kubernetes", "cli", "devops"]
dependencies = ["kubernetes >=36.0.2, <36.1.0"]
requires-python = ">= 3.10"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.scripts]
copypod = "copypod.main:main"

[project.urls]
Homepage = "https://github.com/Memrise/copypod"
Documentation = "https://github.com/Memrise/copypod/blob/main/README.md"
Repository = "https://github.com/Memrise/copypod"
Issues = "https://github.com/Memrise/copypod/issues"
Changelog = "https://github.com/Memrise/copypod/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["copypod"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma missing
    "D1",  # Missing docstrings
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "E501",  # Line too long
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "T201",  # `print` found
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
